2010-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_lsc_credential_omp): Correct comment.
	(get_lsc_credentials_omp): Correct attribute name.

2010-07-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_get): Pass oid to edit_note_omp "get_nvts" case
	in correct parameter.  Pass overrides flag to edit_note_omp "get_tasks"
	case.

	* src/gsad_omp.c (edit_note_omp): Remove min_cvss_base NULL check, as
	only some callers use it.

	* src/html/omp.xsl (html-report-table): Add overrides flag to the request
	parameters passed to the edit_note "get_tasks" case.

2010-07-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl: Completed and fixed help texts for
	Overrides.

2010-07-08  Matthew Mundell <matthew.mundell@greenbone.net>

	Pass agent installer filename in CREATE_AGENT OMP.

	* src/gsad.c (struct req_parms): Add installer_filename field.
	(free_resources): Free installer_filename.
	(serve_post): Set installer_filename.
	(exec_omp_post): Pass installer_filename to create_agent_omp.

	* src/gsad_omp.c (create_agent_omp): Add installer_filename arg.  Send
	filename in CREATE_AGENT.

	* src/gsad_omp.h: Update header accordingly.

2010-07-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Added help for overrides.

	* src/html/help.xsl (contents.html): Added link to overrides-help.
	(glossary.html): Included overrides.
	(overrides.html): New, help for overrides.

2010-07-08  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/gsad.c (free_gchar_array): New function, extracted.
	(free_resources): Extracted and call new function.

2010-07-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Make cmake environment more flexible as discussed on
	openvas-devel: Set CMAKE_BUILD_TYPE only to "Debug" if it is not
	already set. Do not set CMAKE_VERBOSE_MAKEFILE, let it default to OFF.
	Remove redundant flags from CMAKE_C_FLAGS_DEBUG. Replace check for